--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>pl.sprint</groupId>
     <artifactId>sprint-bot-ext-interface</artifactId>
-    <version>1.0.5</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
     <properties>
+        <java.version>21</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>    
 </project>
