--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
     <version>3.0.0</version>
     <packaging>jar</packaging>
     <properties>
-        <java.version>21</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>    
 </project>
